Fixed footer cutting off context

--- a/ThemeParkApplication/ThemeParkApplication/wwwroot/css/site.css
+++ b/ThemeParkApplication/ThemeParkApplication/wwwroot/css/site.css
@@ -1,4 +1,24 @@
-﻿body {
+﻿/* fixing footer cutting of content*/
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+}
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    background-color: #f5f5f5;
+}
+
+body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
